--- a/style.css
+++ b/style.css
@@ -1,4 +1,146 @@
 * {
-	box-sizing: 0;
+	box-sizing: border-box;
 	margin: 0;
+}
+
+body {
+	min-height: 100svh;
+}
+
+/* @keyframes slide-in {
+	from {
+		transform: translateX(-100%);
+	}
+	to {
+		transform: translateX(0);
+	}
+} */
+
+/* @keyframes drop-in {
+	from {
+		transform: rotate(-30deg) translateY(-100%);
+		opacity: 0;
+	}
+	to {
+		transform: rotate(0deg) translateY(0);
+		opacity: 1;
+	}
+} */
+
+/* @keyframes spin {
+	from {
+		transform: rotate(0turn);
+	}
+	to {
+		transform: rotate(1turn);
+	}
+} */
+
+/* @keyframes fancy-spin {
+	0% {
+		transform: rotate(0turn) scale(1);
+	}
+	25% {
+		transform: rotate(1turn) scale(1);
+	}
+	50% {
+		transform: rotate(1turn) scale(1.5);
+	}
+	75% {
+		transform: rotate(0turn) scale(1, 5);
+	}
+	100% {
+		transform: rotate(0turn) scale(1);
+	}
+} */
+
+/* @keyframes grow-shrink {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(1.5);
+	}
+} */
+
+.box {
+	border: 1px solid black;
+	background-color: blueviolet;
+	margin-top: 100px;
+	margin-left: 100px;
+	width: 200px;
+	height: 200px;
+	border-radius: 20px;
+	/* animation: slide-in 1s; */
+	/* animation: drop-in 1s; */
+	/* animation: spin 1s; */
+	/* animation: fancy-spin 5s; */
+	/* animation: grow-shrink 2s; */
+	/* animation-direction: alternate; */
+	animation-timing-function: linear;
+	animation-iteration-count: 3;
+}
+
+@keyframes shake {
+	0% {
+		transform: rotate(0deg);
+	}
+	10% {
+		transform: rotate(5deg);
+	}
+	20% {
+		transform: rotate(0deg);
+	}
+	30% {
+		transform: rotate(5deg);
+	}
+	40% {
+		transform: rotate(0deg);
+	}
+	50% {
+		transform: rotate(5deg);
+	}
+	60% {
+		transform: rotate(0deg);
+	}
+	70% {
+		transform: rotate(5deg);
+	}
+	80% {
+		transform: rotate(0deg);
+	}
+	90% {
+		transform: rotate(5deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+
+.phone-svg {
+	width: 200px;
+	height: 200px;
+	margin-top: 100px;
+	margin-left: 100px;
+}
+
+.phone-svg:hover {
+	animation: shake 0.5s;
+}
+
+@media (prefers-reduced-motion) {
+	.box {
+		animation: none;
+		animation-iteration-count: 0;
+	}
+	.arrow-svg:hover {
+		animation: none;
+		animation-iteration-count: 0;
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+	}
 }
